--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     
-    <input type="text" id="text-input" onkeyup="showText()">
+    <input type="text" id="text-input" onkeyup="showText()" maxlength="60">
     <input type="file" id="meme-insert" accept="image/*" >
    
     <section id="meme-image-container">
